SERVER-72532: add shard version field later in the BSON object

(cherry picked from commit 05f790d60bc7ce8d5b9b61bea8370b1c1f97837d)